@@ -109,34 +109,67 @@
         android:orientation="vertical">
 
         <LinearLayout
-          style="@style/Widget.Grocy.LinearLayout.ListItem.TwoLine.Icon.Clickable"
+          style="@style/Widget.Grocy.LinearLayout.ListItem.SingleLine.Icon"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:onClick="@{v -> switchDark.setChecked(!switchDark.isChecked())}">
+          android:padding="0dp"
+          android:layout_margin="0dp">
 
           <ImageView
-            android:id="@+id/image_dark"
             style="@style/Widget.Grocy.ImageView.ListItem.Icon"
+            android:id="@+id/image_theme"
             tools:ignore="ContentDescription"
-            android:src="@{fragment.darkModeLive ? @drawable/ic_round_dark_to_light_anim : @drawable/ic_round_light_to_dark_anim}" />
+            android:src="@drawable/ic_round_dark_to_light_anim" />
 
           <LinearLayout style="@style/Widget.Grocy.LinearLayout.ListItem.TextBox.Stretch">
 
             <TextView
               style="@style/Widget.Grocy.TextView.ListItem.Title"
-              android:text="@string/setting_dark_mode" />
-
-            <TextView
-              style="@style/Widget.Grocy.TextView.ListItem.Description"
-              android:text="@string/setting_dark_mode_description" />
+              android:text="@string/setting_theme" />
 
           </LinearLayout>
 
-          <com.google.android.material.switchmaterial.SwitchMaterial
-            android:id="@+id/switch_dark"
-            style="@style/Widget.Grocy.Switch"
-            android:onCheckedChanged="@{(view, isChecked) -> fragment.setDarkMode(isChecked)}"
-            android:checked="@{viewModel.darkMode}" />
+        </LinearLayout>
+
+        <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:orientation="vertical"
+          android:paddingStart="72dp"
+          android:paddingEnd="0dp">
+
+          <com.google.android.material.radiobutton.MaterialRadioButton
+            style="@style/Widget.Grocy.RadioButton.BottomSheet"
+            android:id="@+id/radio_button_follow_system"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:minHeight="40dp"
+            android:text="@string/setting_theme_follow_system"
+            android:checked="@{viewModel.isThemeActive(viewModel.THEME_SYSTEM)}"
+            android:onClick="@{() -> fragment.setTheme(viewModel.THEME_SYSTEM)}"/>
+
+          <com.google.android.material.radiobutton.MaterialRadioButton
+            style="@style/Widget.Grocy.RadioButton.BottomSheet"
+            android:id="@+id/radio_button_light"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:minHeight="40dp"
+            android:text="@string/setting_theme_light"
+            android:checked="@{viewModel.isThemeActive(viewModel.THEME_LIGHT)}"
+            android:onClick="@{() -> fragment.setTheme(viewModel.THEME_LIGHT)}"/>
+
+          <com.google.android.material.radiobutton.MaterialRadioButton
+            style="@style/Widget.Grocy.RadioButton.BottomSheet"
+            android:id="@+id/radio_button_dark"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:minHeight="40dp"
+            android:text="@string/setting_theme_dark"
+            android:checked="@{viewModel.isThemeActive(viewModel.THEME_DARK)}"
+            android:onClick="@{() -> fragment.setTheme(viewModel.THEME_DARK)}"/>
 
         </LinearLayout>
 
