@@ -6,6 +6,7 @@
 - Improved: Add new card to login form which contains info about port (#413)
 - Improved: Set focus mode to continuous in ZXing barcode scanner (works better)
 - Improved: Tap to toggle torch on login page with QR code scanner
+- Improved: Theme can be set to light/dark only or follow system (#423)
 - Improved: Cursor behavior on login form
 - Improved: Updated translations
 - Fixed: Barcode scanner didn't start again after error in quick mode
